<resources>
    <string name="app_name">Final Project</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="home">Главная</string>
    <string name="menu">Меню</string>
    <string name="replay_password">Повторите пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="sign_in">Вход</string>
    <string name="close">Закрыть</string>
    <string name="next">Далее</string>
    <string name="back">Назад</string>
    <string name="board_title_1">Оформить займ</string>
    <string name="board_title_2">Получить займ</string>
    <string name="board_title_3">Оформленные займы</string>
    <string name="board_first_describe_3">На главном экране приложения отображается список оформленных займов.</string>
    <string name="board_first_describe_1">Выберите сумму и нажмите «продолжить». Затем укажите свои данные.</string>
    <string name="board_first_describe_2">Отслеживайте изменение статуса заявки.</string>
    <string name="board_second_describe_1">После нажатия «Оформить займ» заявка поступит в банк</string>
    <string name="board_second_describe_2">Когда займ будет одобрен, подойдите с паспортом в отделение банка для подписания договора</string>
    <string name="empty" translatable="false" />
    <string name="loan_amount">Сумма займа</string>
    <string name="approved">Одобрен</string>
    <string name="under_consideration">На рассмотрении</string>
    <string name="rejected">Отклонен</string>
    <string name="my_loans">Мои займы</string>
    <string name="minimum_1000">Минимум 1 000 ₽</string>
    <string name="max_value_loan">Максимум %1$s ₽</string>
    <string name="max_value_predel" translatable="false">%1$s ₽</string>
    <string name="conditions_loan">Под %1$s%% на %2$s дней</string>
    <string name="desc_loans_empty">Здесь будут отображаться Ваши активные займы</string>
    <string name="sum_loan_def" translatable="false">7000</string>
    <string name="min_sum_loan_seek" translatable="false">0 ₽</string>
    <string name="conditions">Условия</string>
    <string name="сontinue">Продолжить</string>
    <string name="check_all">Посмотреть все</string>
    <string name="number_of_loan" translatable="false">№ %1$s</string>
    <string name="percent_data" translatable="false">%1$s %%</string>
    <string name="name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="phone_number">Номер телефона</string>
    <string name="number_of_loan_title">Номер займа</string>
    <string name="issue_date">Дата оформления</string>
    <string name="period_title">Период (дней)</string>
    <string name="percent">Процент</string>
    <string name="sum">Сумма</string>
    <string name="status">Статус</string>
    <string name="detail_desc"><![CDATA[Когда займ примет статус «Одобрен», Вам нужно будет подойти с паспортом в отделение банка для подписания договора и получить деньги]]></string>

    <string name="offers_for_you">Предложения для Вас</string>
    <string name="bank_branches">Отделения банка</string>
    <string name="help">Помощь</string>
    <string name="language">Язык</string>
    <string name="go_out">Выйти</string>
    <string name="nearest_bank_branch">Ближайшее отделение банка</string>
    <string name="special_offer">Специальное предложение</string>
    <string name="special_offer_describe"><![CDATA[Погасите займ досрочно и мы увеличим лимит для следующего займа]]></string>
    <string name="service_dont_work">Сервис временно недоступен</string>
    <string name="return_to_home">Вернуться на главную</string>
    <string name="we_help">Мы поможем</string>
    <string name="cancel">Отмена</string>
    <string name="offer_log_out">Вы уверены, что хотите выйти?</string>
    <string name="help_desc"><![CDATA[Остались вопросы по использованию приложения? Обратитесь к нам на горячую линию 8-800-300-10-10]]></string>
    <string name="help_phone" translatable="false">8-800-300-10-10</string>
    <string name="apply">Применить</string>
    <string name="your_data">Ваши данные</string>
    <string name="applying_for_loan">Оформление займа</string>
    <string name="phone">Телефон</string>
    <string name="desc_new_loan">После оформления заявки на займ, банк проведет анализ вашей кредитной истории</string>
    <string name="apply_for_loan">Оформить займ</string>
    <string name="success_new_loan_desc"><![CDATA[Для получения придите в банк с паспортом до 20 мая]]></string>
    <string name="application_not_approved">Заявка не одобрена</string>
    <string name="error_new_loan_desc"><![CDATA[Сейчас мы не можем одобрить вашу заявку]]></string>
    <string name="get_money_in_bank">Получите %1$s ₽ в банке</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="english" translatable="false">English</string>
    <string name="field_cannot_be_empty">Поле не может быть пустым</string>
    <string name="the_name_must_contain_only_cyrillic">Имя должно содержать только кириллицу</string>
    <string name="invalid_phone_number">Некорректный номер телефона</string>
    <string name="lastname_must_contain_only_cyrillic">Фамилия должна содержать только кириллицу</string>
    <string name="get_a_loan">Получите займ</string>
    <string name="in_2_clicks">в 2 клика</string>
    <string name="money_cash">Деньги наличными</string>
    <string name="for_any_purpose">на любые цели</string>
    <string name="only_number_and_english_char">Только цифры и латинские буквы</string>
    <string name="password_mismatch">Пароли не совпадают</string>
    <string name="login_is_buzy">Извините, пользователь с данным логином уже зарегистрирован</string>
    <string name="unknown_error">Произошла непредвиденная ошибка</string>
    <string name="user_hasnot">Такого пользователя не существует</string>
    <string name="no_internet">Нет соединения с интернетом</string>
    <string name="time_out">Время ожидаемого запроса истекло</string>
    <string name="loan_processing_not_available">Оформление займа недоступно</string>
</resources>