<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
    tools:context=".ui.newLoanFragment.NewLoanFragment">

    <Toolbar
        android:id="@+id/toolbar"
        style="@style/Headline2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:buttonGravity="top|bottom"
        android:navigationIcon="@drawable/ic_back"
        android:title="@string/applying_for_loan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/title_tv"
            style="@style/Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/your_data" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_name"
            style="@style/TextInputLayoutUserData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_tv"
                style="@style/Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:textAppearance="@style/Body2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_lastname"
            style="@style/TextInputLayoutUserData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname_tv"
                style="@style/Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:textAppearance="@style/Body2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_phone"
            style="@style/TextInputLayoutUserData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_tv"
                style="@style/Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:textAppearance="@style/Body2" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/desc_new_loan"
            android:textColor="@color/font_secondary" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        style="@style/ButtonPrimaryActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/apply_for_loan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:rippleColor="@color/bg_disable" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:indeterminateTint="@color/permanent_primary_dark"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>