<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_primary"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    tools:context=".ui.registrationFragment.RegistrationFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_login"
        style="@style/TextInputLayoutAuthLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tv"
            style="@style/Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:textAppearance="@style/Body2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_password"
        style="@style/TextInputLayoutAuthPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_tv"
            style="@style/Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/Body2"
            android:textColorHint="@color/font_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_replay_password"
        style="@style/TextInputLayoutAuthPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/replay_password_tv"
            style="@style/Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/replay_password"
            android:inputType="textPassword"
            android:textAppearance="@style/Body2"
            android:textColorHint="@color/font_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonPrimaryActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textAppearance="@style/Body2" />
</LinearLayout>