<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.errorNewLoanFragment.ErrorNewLoanFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close" />

    <ImageView
        android:id="@+id/icon_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:src="@drawable/ic_some_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/title_tv"
        style="@style/Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/application_not_approved"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_iv" />

    <TextView
        style="@style/Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="40dp"
        android:lineHeight="20sp"
        android:text="@string/error_new_loan_desc"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/title_tv"
        app:layout_constraintStart_toStartOf="@id/title_tv"
        app:layout_constraintTop_toBottomOf="@id/title_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        style="@style/ButtonPrimaryActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/return_to_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:rippleColor="@color/bg_disable" />
</androidx.constraintlayout.widget.ConstraintLayout>